[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/skills/SpikeTrap.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/spikes1.png-f8862cbf271e5bbf0582f21daa73c160.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 18 )

[node name="SpikeTrap" type="Node2D" groups=["SpikeTrap"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["NoStagger", "Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 30 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 6.5
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
